# osu-top

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
libs/: CMakeLists.txt
modules/: FindMagnumPlugins.cmake
src/: README.md  beatmap.h  config_manager.cpp  config_manager.h  index.html  main.cpp  request_maps.cpp  request_maps.h  score.h  web_request.cpp  web_request.h  índex.html
